--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "main": "dist/src/index.js",
   "type": "module",
   "scripts": {
+    "build" : "tsc",
+    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
